tests/ivg/invalid/ivg3_comma_gradient.ivg
format IVG-3
// IVG-3 with space-separated gradient coordinates
fill gradient:[linear 0,0 1,1]
